k8s/deployment-music-app-ver1.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: deployment-musicapp-ver1
  labels:
   app  : musicapp
spec: 
   selector:
    matchLabels:
     project: music-pod1
   template:
    metadata:
     labels:
      project: music-pod1
    spec:
     containers: 
     - name : container-web
       image: miketyupa/hello-world:latest
       ports:
       - containerPort: 5000
