k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      nodeSelector:
        beta.kubernetes.io/os: linux
      containers:
      - name: hello-world
        image: miketyupa/hello-world
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        resources:
            limits:
              cpu: "0.5"
            requests:
              cpu: "0.25"
