k8s/pod-hello-world-ver2.yml
apiVersion: v1
kind: Pod
metadata: 
  name: pod-hello-world-ver2
  labels:
     env: prod
     app: main
     tier: frontend
     owner: MikeTyupa
spec: 
  containers: 
  -  name: nginx
     image: miketyupa/hello-world:latest
     ports:
      -  containerPort: 5000
