k8s/service-loadbalancer-music-app-autoscaling.yml
apiVersion: networking/v1
kind: Deployment
metadata: 
  name: deployment-music-app-autoscaling
  labels:
   app  : scaled-music-app
   owner: MikeTyupa
spec: 
   selector:
    matchLabels:
     project: music-pod
   template:
    metadata:
     labels:
      project: music-pod
    spec:
     containers: 
     - name : container-music-web
       image: miketyupa/hello-world:83
       ports:
       - containerPort: 5000

---
apiVersion: autoscaling/v2beta1
kind: HorizontalPodAutoscaler
metadata:
 name: music-app-autoscaling
spec:
 scaleTargetRef:
  apiVersion: apps/v2beta1v1
  kind: Deployment
  name: deployment-music-app-autoscaling
 minReplicas: 2
 maxReplicas: 6
 metrics: 
  - type: Resource
    resource:
     name: cpu
     targetAverageUtilization: 70
  - type: Resource
    resource:
     name: memory
     targetAverageUtilization: 80

---
apiVersion: v1
kind: Service
metadata:
  name: service-loadbalancer
  labels :
    env  : prod
    owner: MikeTyupa
spec:
  selector:
    project: music-pod # Selecting Pods with those labels
  ports:
  - name: app-listener
    protocol: TCP
    port: 80 # Port on LoadBalancer
    targetPort: 5000 # Port on Pod
  type: LoadBalancer
