k8s/service-loadbalancer-single-musicapp.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: deployment-musicapp-replicas
  labels:
   app  : my-scaled-musicapp-app
   owner: MikeTyupa
spec: 
   replicas: 3
   selector:
    matchLabels:
     project: music-pod1  # Service will look for those Pods labels
   template:
    metadata:
     labels:
      project: music-pod1
    spec:
     containers: 
     - name : container-web
       image: miketyupa/hello-world:83
       ports:
       - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: service-loadbalancer
  labels :
    env  : prod
    owner: MikeTyupa
spec:
  selector:
    project: music-pod1 # Selecting Pods with those labels
  ports:
  - name: app-listener
    protocol: TCP
    port: 80 # Port on LoadBalancer
    targetPort: 5000 # Port on Pod
  type: LoadBalancer
